--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <header>
         <nav>
-          <a href="services.html">Services</a>
+          <a href="service.html">Services</a>
           <a href="#">Product</a>
           <a href="#">Vision</a>  
           <a href="#">Features</a>
