Add bottom section and footer sizing issue with service image

--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <header>
         <nav>
-          <a href="service.html">Services</a>
+          <a href="services.html">Services</a>
           <a href="#">Product</a>
           <a href="#">Vision</a>  
           <a href="#">Features</a>
@@ -76,8 +76,6 @@
       <footer>
         <p>Copyright Great Idea! 2018 </p>
       </footer>
-    </div>
-      
-    
+    </div> 
   </body>
 </html>
